# ImageBasedModellingEdu

./: .gitignore  README.md
core/: camera.cc  image_tools.h
examples/: CMakeLists.txt
examples/data/sequence_scene/: synth_0.out
examples/data/sequence_scene/views/view_0000.mve/: exif.blob  meta.ini
examples/data/sequence_scene/views/view_0001.mve/: exif.blob  meta.ini
examples/data/sequence_scene/views/view_0002.mve/: depth-L2.mvei  exif.blob  meta.ini
examples/data/sequence_scene/views/view_0003.mve/: exif.blob  meta.ini
examples/data/sequence_scene/views/view_0004.mve/: exif.blob  meta.ini
examples/data/sequence_scene/views/view_0005.mve/: exif.blob  meta.ini
examples/data/sequence_scene/views/view_0006.mve/: exif.blob  meta.ini
examples/task1/: CMakeLists.txt  task1-2_test_camera.cc  task1-3_test_fundamental_8_point.cc  task1-4_test_fundamental_ransac.cc  task1-5_test_pose_from_fundamental.cc  task6_test_pose_from_fundamental.cc
examples/task2/: CMakeLists.txt  correspondence2D3D.txt  task2-1_test_triangle.cc  task2-2_test_p3p_kneip.cc  task2-2_test_p3p_ransac.cc  task2-3_test_lm_optimize.cc  task2-4_test_jacobian.cc  task2-5_test_bundle_adjustment.cc
examples/task3/: CMakeLists.txt  task3-1_test_incremental_sfm.cc
examples/task4/: CMakeLists.txt  class4_test_incremental_sfm.cc  task4-1_dmrecon_single_view.cc  task4-1_scene2pset_single_view.cc  task4-2_dmrecon_multi_views.cc  task4-2_scene2pset_multi_views.cc
examples/task6/: CMakeLists.txt
examples/task7/: CMakeLists.txt
examples/task8/: CMakeLists.txt  task8_1_3d_shapes.cc  task8_2_VBO.cc  task8_3_texturing.cc  task8_4_texturing.cc
examples/task8/three.js/: webgl_loader_obj_mtl.html
examples/task8/three.js/models/: Ford_fusion.mtl
features/: matching.h
mvs/: dmrecon.cc  dmrecon.h  global_view_selection.cc  global_view_selection.h  image_pyramid.h  local_view_selection.cc  local_view_selection.h  mvs_tools.cc  mvs_tools.h  patch_optimization.cc  patch_optimization.h  patch_sampler.cc  patch_sampler.h  progress.h  settings.h  single_view.cc  single_view.h  view_selection.h
sfm/: bundler_incremental.cc  pose_p3p.cc  ransac_pose_p3p.cc
texturing/: global_seam_leveling.cpp
